Ensure all landing page buttons have consistent left-aligned text matching links

--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -135,6 +135,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 .link-card-content {
@@ -144,6 +148,7 @@
   flex-direction: column;
   justify-content: center;
   min-height: 2.5rem;
+  align-items: flex-start;
 }
 
 .link-title {
@@ -153,6 +158,7 @@
   margin: 0;
   line-height: 1.3;
   text-align: left;
+  width: 100%;
 }
 
 .link-subtitle {
@@ -162,6 +168,7 @@
   line-height: 1.4;
   text-align: left;
   min-height: 1.3rem;
+  width: 100%;
 }
 
 .link-arrow {
